--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -6,7 +6,7 @@ author_profile: true
 ---
 
 {% if site.author.googlescholar %}
-  <div class="wordwrap">You can also find my articles on <a href="{{https://scholar.google.co.kr/citations?view_op=list_works&hl=ko&hl=ko&user=MMmX4wMAAAAJ&sortby=pubdate}}">my Google Scholar profile</a>.</div>
+  <div class="wordwrap">You can also find my articles on <a href="{{https://scholar.google.co.kr/citations?user=MMmX4wMAAAAJ&hl=ko&oi=ao}}">my Google Scholar profile</a>.</div>
 {% endif %}
 
 {% include base_path %}
